Doc/force-app/main/default/objects/qtc_BillingSchedule__mdt/fields/Contract_Year__c.field-meta.xml
<CustomField>
    <fullName>Contract_Year__c</fullName>
    <description>Defines which year of the contract this billing schedule applies to -- e.g. &quot;Year 1&quot;</description>
    <label>Contract Year</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>