Doc/force-app/main/default/objects/qtc_BillingSchedule__mdt/fields/Days_In_Advance__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Advance__c</fullName>
    <description>Determines the number of days to offset billing from start date.</description>
    <label>Days In Advance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>