Doc/force-app/main/default/objects/qtc_BillingSchedule__mdt/fields/Lookup_Key__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Key__c</fullName>
    <description>Unique concatenated value that is used to match from Price Rule Lookup Query on Quote Line. 
The formula for assigning this value is Year_Billing_Frequency__c + &quot;-&quot; + Number_of_Days_In_Advance__c + “-” + Num_Invoices_Per_Year__c</description>
    <inlineHelpText>Year_Billing_Frequency__c + &quot;-&quot; + Number_of_Days_In_Advance__c + “-” + Num_Invoices_Per_Year__c</inlineHelpText>
    <label>Lookup Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>