Doc/force-app/main/default/objects/qtc_BillingSchedule__mdt/fields/Number_of_Invoices_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Invoices_Per_Year__c</fullName>
    <description>Represents the number of Invoices/Invoice Periods per year -- used to derive the Billing Schedule lookup key</description>
    <label>Number of Invoices Per Year</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>