Doc/force-app/main/default/objects/qtc_BillingSchedule__mdt/fields/Year_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Year_Billing_Frequency__c</fullName>
    <description>Captures the Contract Year + the Billing Frequency. Used to create lookup key value.</description>
    <label>Year Billing Frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>