Doc/force-app/main/default/objects/qtc_BillingSchedule__mdt/listViews/All_Schedules.listView-meta.xml
<ListView>
    <fullName>All_Schedules</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Contract_Year__c</columns>
    <columns>Billing_Frequency__c</columns>
    <columns>Lookup_Key__c</columns>
    <columns>NetSuite_Key__c</columns>
    <columns>Days_In_Advance__c</columns>
    <columns>First_Year_Months__c</columns>
    <columns>Software_Payment_Terms__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Schedules</label>
    <language>en_US</language>
</ListView>